# fullstack-cli

./: .gitignore  README.md  create_package.py  pyproject.toml
src/fullstack/: bootstrap.py  cli.py
