[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullstack-cli"
version = "0.1.0"
authors = [
    {name = "Nathanael Miksis"},
]
description = "A CLI tool to bootstrap full-stack web applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "subprocess.run",
    "alembic==1.12.1",
    "flake8==6.1.0",
    "black==24.3.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "gunicorn==21.0.0",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "pydantic==2.5.1"
]

[project.urls]
"Homepage" = "https://github.com/nathanael2020/fullstack-cli"
"Bug Tracker" = "https://github.com/nathanael2020/fullstack-cli/issues"

[project.scripts]
fullstack = "fullstack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
